--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   path_provider: ^1.6.7
   hive: ^1.4.1+1
   cupertino_icons: ^0.1.3
+  firebase_auth_web: ^0.1.3+1
+  cloud_firestore_web: ^0.1.1+2
+  firebase_core: ^0.4.5
+  freezed: ^0.10.9
+  freezed_annotation: ^0.7.1
 
 dev_dependencies:
   flutter_test:
