--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   freezed_annotation: ^0.7.1
   flutter_icons: ^1.1.0
   stacked_hooks: ^0.1.1+3
+  firebase_storage: ^3.1.6
 
 dev_dependencies:
   flutter_test:
