--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,36 +10,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  agora_rtc_engine: ^1.0.12
-  permission_handler: ^5.0.0+hotfix.9
-  firebase_auth: ^0.16.1
-  cloud_firestore: ^0.13.6
-  stacked_services: ^0.3.3
-  stacked: ^1.5.7+1
-  auto_route:
-  get_it:
-  injectable:
-  image_picker: ^0.6.3+1
-  path_provider: ^1.6.7
-  hive: ^1.4.1+1
+  agora_rtc_engine: ^3.3.3
+  agora_rtm: ^0.9.14
+  convex_bottom_bar: ^3.0.0
   cupertino_icons: ^0.1.3
-  firebase_auth_web: ^0.1.3+1
-  cloud_firestore_web: ^0.1.1+2
-  firebase_core: ^0.4.5
-  freezed: ^0.10.9
-  freezed_annotation: ^0.7.1
-  flutter_icons: ^1.1.0
-  stacked_hooks: ^0.1.1+3
-  firebase_storage: ^3.1.6
+  flutter_share: ^2.0.0
+  get: ^4.1.4
+  permission_handler: ^7.0.0
+  responsive_builder: ^0.4.1
+  signal_strength_indicator: ^0.4.0
+  stacked: ^2.1.0
+  stacked_services: ^0.8.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  hive_generator: ^0.5.1
-  build_runner:
-  auto_route_generator:
-  injectable_generator:
-  json_serializable: ^3.3.0
 
 flutter:
   uses-material-design: true
