--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,13 @@ dependencies:
     sdk: flutter
   agora_rtc_engine: ^3.3.3
   agora_rtm: ^0.9.14
+  cloud_firestore: ^1.0.6
   convex_bottom_bar: ^3.0.0
   cupertino_icons: ^0.1.3
+  firebase_auth: ^1.1.1
+  firebase_core: ^1.0.4
+  firebase_storage: ^8.0.4
+  flutter_icons: ^1.1.0
   flutter_share: ^2.0.0
   get: ^4.1.4
   permission_handler: ^7.0.0
@@ -25,6 +30,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  injectable: ^1.2.2
 
 flutter:
   uses-material-design: true
