--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_icons: ^1.1.0
   flutter_share: ^2.0.0
   get: ^4.1.4
+  image_picker: ^0.7.4
   permission_handler: ^7.0.0
   responsive_builder: ^0.4.1
   signal_strength_indicator: ^0.4.0
