--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  agora_rtc_engine: ^3.3.3
-  agora_rtm: ^0.9.14
+  agora_rtc_engine: null
+  agora_rtm: null
   cloud_firestore: ^1.0.6
   convex_bottom_bar: ^3.0.0
   cupertino_icons: ^0.1.3
@@ -20,7 +20,7 @@ dependencies:
   firebase_storage: ^8.0.4
   flutter_icons: ^1.1.0
   flutter_share: ^2.0.0
-  get: ^4.1.4
+  get_it: null
   image_picker: ^0.7.4
   permission_handler: ^7.0.0
   responsive_builder: ^0.4.1
@@ -31,7 +31,14 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  injectable: ^1.2.2
+  auto_route_generator: null
+  build_runner: null
+  flutter_native_splash: ^1.1.8+4
+  injectable_generator: null
+  json_serializable: null
+flutter_native_splash:
+  background_image: "assets/illustrations/splash.png"
+  
 
 flutter:
   uses-material-design: true
