--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  agora_rtc_engine: null
-  agora_rtm: null
   cloud_firestore: ^1.0.6
   convex_bottom_bar: ^3.0.0
   cupertino_icons: ^0.1.3
+  emoji_picker: ^0.1.0
   firebase_auth: ^1.1.1
   firebase_core: ^1.0.4
   firebase_storage: ^8.0.4
@@ -22,6 +21,9 @@ dependencies:
   flutter_share: ^2.0.0
   get_it: null
   image_picker: ^0.7.4
+  jitsi_meet: ^4.0.0
+  jitsi_meet_web: ^1.0.4
+  path_provider: ^2.0.1
   permission_handler: ^7.0.0
   responsive_builder: ^0.4.1
   signal_strength_indicator: ^0.4.0
