:recycle: refactored code

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@ xmlns:tools="http://schemas.android.com/tools"
          FlutterApplication and put your custom class here. -->
     <application
         tools:replace="android:label"  
-        android:name="io.flutter.app.FlutterApplication"
+        android:name="${applicationName}"
         android:label="video_conference"
         android:icon="@mipmap/ic_launcher">
         <activity
