--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,39 +5,41 @@ publish_to: "none"
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.2.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  cloud_firestore: ^3.1.8
+  convex_bottom_bar: ^3.0.0
+  cupertino_icons: ^1.0.4
+  firebase_auth: ^3.3.7
+  firebase_core: ^1.12.0
+  firebase_storage: ^10.2.7
   flutter:
     sdk: flutter
-  cloud_firestore: ^1.0.6
-  convex_bottom_bar: ^3.0.0
-  cupertino_icons: ^0.1.3
-  emoji_picker: ^0.1.0
-  firebase_auth: ^1.1.1
-  firebase_core: ^1.0.4
-  firebase_storage: ^8.0.4
-  flutter_icons: ^1.1.0
+  flutter_icons:
+    git:
+      url: git://github.com/jibiel/flutter-icons.git
   flutter_share: ^2.0.0
-  get_it: null
-  image_picker: ^0.7.4
+  get_it: ^7.2.0
+  image_picker: ^0.8.4+9
   jitsi_meet: ^4.0.0
-  path_provider: ^2.0.1
-  permission_handler: ^7.0.0
-  responsive_builder: ^0.4.1
-  signal_strength_indicator: ^0.4.0
-  stacked: ^2.1.0
-  stacked_services: ^0.8.5
-  uuid: ^3.0.4
+  path_provider: ^2.0.9
+  permission_handler: ^9.2.0
+  responsive_builder: ^0.4.2
+  signal_strength_indicator: ^0.4.1
+  stacked: ^2.2.8
+  stacked_services: ^0.8.17
+  uuid: ^3.0.6
 
 dev_dependencies:
+  auto_route_generator: ^3.2.3
+  build_runner: ^2.1.7
+  flutter_native_splash: ^2.0.5
   flutter_test:
     sdk: flutter
-  auto_route_generator: null
-  build_runner: null
-  flutter_native_splash: ^1.1.8+4
-  injectable_generator: null
-  json_serializable: null
+  import_sorter: ^4.6.0
+  injectable_generator: ^1.5.3
+  json_serializable: ^6.1.4
 flutter_native_splash:
   background_image: "assets/illustrations/splash.png"
 
@@ -45,7 +47,6 @@ flutter:
   uses-material-design: true
   assets:
     - assets/illustrations/
-    - assets/images/
 
   fonts:
     - family: Gilroy
